完成返回图片api
